Fix unsplash attribution overlapping alert

--- a/sass/_alerts.scss
+++ b/sass/_alerts.scss
@@ -4,6 +4,8 @@
     max-width: 100vw;
     position: -webkit-sticky;
     position: sticky;
+    //so displayed above unsplash attribution
+    z-index: 1;
     left: 0;
     //so position sticky works
     display: inline-block;
